--- a/wordpress/TODO
+++ b/wordpress/TODO
@@ -1,4 +1,3 @@
 Specify single name for webnode
-generate /etc/host on bastion
 add flavor input for each type of vm
-remove dependance to 10.0.0.0
+add autoscale policies
